# quince

./: .clang-format  .gitmodules  CMakeLists.txt
basis/: 6-31g-short.gbs  6-31g.gbs
include/quince/: element_data.h  geom.h
include/quince/parse/: gbs.h  xyz.h
include/saneqc/: geom.h
include/saneqc/parse/: fdouble.h  gbs.h  xyz.h
src/: CMakeLists.txt  gbs.cc  gbs_lexy.cc  geom.h  main.cc  xyzparser.cc  xyzparser.h
src/test/: CMakeLists.txt  gbs.cc  xyz.cc
test/data/: h2o.xyz  h2obad.xyz  h2ofortran.xyz
